style.css
@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500;600;700&display=swap");

* {
  font-family: "Red Hat Display", sans-serif;
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  background-color: black;
  color: white;
}

.app-container {
  margin: 0 auto;
  min-width: 420px;
  width: 20%;
  aspect-ratio: 9 / 17;
  background-image: url("gradients/mist.png");
  background-size: cover;
  border-radius: 2em;
  padding: 1.5em;
}

#search-input {
  background-color: transparent;
  font-size: 1.5rem;
  border: none;
  padding: 0.2em 0.5em;
  font-weight: 400;
  caret-color: rgba(255, 255, 255, 0.8);
  color: rgba(255, 255, 255, 0.8);
}

#search-input:focus {
  outline: none;
}

#search-input::placeholder {
  color: rgba(255, 255, 255, 0.8);
}

#search-form {
  display: flex;
  border: 1px solid rgba(255, 255, 255, 0.8);
  border-radius: 2em;
}

#search-button {
  background-color: transparent;
  border: none;
  cursor: pointer;
  margin-left: 1em;
}

#search-button > .fa-magnifying-glass {
  font-size: 1rem;
  color: rgba(255, 255, 255, 0.8);
  margin-top: 0.2em;
}

.region {
  display: flex;
  flex-direction: column;
  margin-top: 1.5em;
  margin-left: 0.5em;
}

#country {
  color: rgb(255, 255, 255, 0.7);
  font-size: 1.1rem;
  font-weight: 300;
  letter-spacing: 0.1rem;
}

#city {
  color: white;
  font-size: 2rem;
  font-weight: 500;
  letter-spacing: 0.05rem;
}

.weather-info {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.weatherIcon {
  height: 12em;
  margin-top: 1em;
}

#temp {
  color: white;
  font-size: 5.5rem;
  font-weight: 700;
  margin-top: -0.2em;
}

#temp::after {
  content: "°C";
  font-weight: 400;
}

#weather-desc {
  text-transform: uppercase;
  font-size: 1.5rem;
  font-weight: 500;
}

#timestamp {
  font-size: 1.2rem;
  font-weight: 300;
  color: rgb(255, 255, 255, 0.7);
}

.weather-details {
  display: flex;
  flex-direction: column;
  margin-top: 2em;
  padding: 2em;
}

.weather-row {
  display: flex;
  justify-content: space-between;
}

.weather-col {
  width: 35%;
  display: flex;
  flex-direction: column;
}

.weather-col .col {
  display: flex;
}

.sun-icons {
  height: 2.5em;
  margin: 0.2em 1em 0 0;
}

.details-label {
  font-weight: 300;
  color: rgb(255, 255, 255, 0.7);
  font-size: 1rem;
}

.details-span {
  font-size: 1.3rem;
  font-weight: 500;
}

.divider {
  border: 1px solid rgba(109, 149, 209, 0.1);
  border-radius: 20vmin;
  margin: 0.75em 0;
}

@media screen and (max-width: 480px) {
  .app-container {
    width: 100%;
    height: 100vh;
    border-radius: 0;
    padding: 1.5em;
  }

  #country {
    font-size: 1.5rem;
  }

  #city {
    font-size: 2.2rem;
  }

  .weatherIcon {
    height: 14em;
  }

  #temp {
    font-size: 7rem;
  }

  #weather-desc {
    font-size: 2rem;
  }

  #timestamp {
    font-size: 1.5rem;
  }

  .sun-icons {
    height: 3em;
  }

  .details-label {
    font-size: 1.2rem;
  }
}

